add default java opts